--- a/report/report.tex
+++ b/report/report.tex
@@ -1,7 +1,6 @@
 \documentclass[11pt, a4paper]{article}
 \usepackage{ctex}
-
-\usepackage[margin=1in]{geometry}
+\usepackage[margin=0.9in]{geometry}
 \usepackage{color}
 \usepackage{clrscode}
 \usepackage{amssymb}
@@ -65,7 +64,7 @@
   
 \section{附录}
 	\subsection{架构图}
-		\includegraphics[width=6.5in]{cpu}
+		\includegraphics[width=6in]{cpu}
 	\subsection{参考资料}
 		\begin{enumerate}
 			\item 助教代码：\url{https://github.com/sxtyzhangzk/mips-cpu/}
@@ -73,4 +72,6 @@
 		\end{enumerate}	
 	\subsection{特别感谢}
 		提供测试代码的范舟同学和给予我很多帮助的吴章昊同学
+	\subsection{Github地址}
+		\url{https://github.com/Hzfengsy/RISC-V}
 \end{document}
